tests/errors/sem.type-invalid.minus-op.or
main :: () -> void {
    x := true;
    -x;
};
